# wizseries

./: .clang-format  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
cpp/: CMakeLists.txt  main.cpp
cpp/series/: AlternatingHarmonicVisualizer.h  AperyConstantVisualizer.h  BaselProblemVisualizer.h  CantorSetVisualizer.h  ESeriesVisualizer.h  GLRenderer.h  GeometricProgressionVisualizer.h  GregoryLeibnizVisualizer.h  HarmonicProgressionVisualizer.h  ISeriesVisualizer.h  InverseGeometricVisualizer.h  LogisticMapVisualizer.h  SeriesManager.h
scripts/: build-wasm.sh
src/: App.tsx  index.css  wasm-engine.d.ts  wasm.d.ts
src/components/ui/: badge.tsx  input.tsx  label.tsx
src/hooks/: useWasmEngine.ts
src/wasm/: engine.js  engine.wasm
